# Auto_Insights_Generator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
auto_insights/: __init__.py  core.py  corr.py  llm.py  report.py  stats.py  tests.py  utils.py  viz.py
examples/: demo.ipynb
