[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "auto-insights-generator"
version         = "0.1.0"
description     = "Automated EDA for pandas DataFrames, powered by the Anthropic API."
readme          = "README.md"
requires-python = ">=3.10"
dependencies    = [
    "anthropic>=0.25.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "jupyter",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["auto_insights*"]